--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -190,7 +190,7 @@
   <string name="every_year_month_of_day">%1$s%2$s zi</string>
     <string name="exist_calendar">Abonat</string>
     <string name="festival_detail_title">Festival</string>
-    <string name="force_touch_title_add_new_event">Adăugați un eveniment nou</string>
+    <string name="force_touch_title_add_new_event">Adăugați un eveniment</string>
   <string name="fortune_birthday">zi de naștere</string>
   <string name="fortune_card_caiwei">poziţia financiară：</string>
   <string name="fortune_card_set_bazi">Stabilirea de naștere</string>
