--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -29,6 +29,9 @@
     <string name="apk_status_install">Instalat</string>
     <string name="apk_status_installed_old">Versiune veche</string>
     <string name="apk_status_uninstalled">Neinstalat</string>
+    <string name="app_install_tips_go_to">Lansați acum</string>
+    <string name="app_install_tips_install_success">%1$s instalată cu succes</string>
+    <string name="app_name">Cheetah Mobile CleanMaster SDK</string>
     <string name="apps_sort_type_item_size">Dimensiune</string>
     <string name="apps_sort_type_item_time">Utilizate frecvent</string>
     <string name="apps_sort_type_title">Sortare</string>
@@ -37,6 +40,8 @@
     <string name="auto_clean_switch_on">Activat</string>
     <string name="auto_cleaner_open">Activat</string>
     <string name="back">Înapoi</string>
+    <string name="browser_scan_history_desc">Istoricul de navigare</string>
+    <string name="browser_search_history_desc">Elementele căutate</string>
     <string name="btn_text_done">Finalizat</string>
     <string name="btn_text_quick_cleanup">Curăţare</string>
     <string name="btn_text_quick_scan">Scanare</string>
@@ -75,6 +80,7 @@
     <string name="cache_title_empty_folder2">Dosare goale</string>
     <string name="cache_title_system_cache">Cache de sistem</string>
     <string name="cached_garbage">Cache</string>
+    <string name="call_log">Istoricul apelurilor</string>
     <string name="cancel">Anulaţi</string>
     <string name="clean_content_all">Tot</string>
     <string name="clean_content_one">1 element</string>
@@ -84,6 +90,8 @@
     <string name="clear_bigfiles">Ștergeți fișierele mari, fotografiile dublate și alte lucruri inutile</string>
     <string name="clear_immediately">Ștergeţi acum</string>
     <string name="clear_safe_notify">Bara de notificări securitate</string>
+    <string name="clip_board_history_desc">Conținutul copiat/tăiat</string>
+    <string name="clipboard">Clipboard</string>
     <string name="close">Închideți</string>
     <string name="confirm_auto_cleaner">OK</string>
     <string name="conn_of_function_safe">Conexiune la rețea</string>
@@ -159,7 +167,6 @@
     <string name="grabage_rank_title">Curățat astăzi</string>
     <string name="harass_detail">Au fost blocate %1$d SMS-uri și %2$d apeluri</string>
     <string name="header_optimizer">Prin utilizarea acestei funcții, sunteți de acord cu %s.</string>
-    <string name="hint_bar_select_image">%d selectate</string>
     <string name="hint_clean_select_similar_image">Ştergere…</string>
     <string name="hints_ad_header_left">Anunțuri</string>
     <string name="hints_apk_header_left">Pachete</string>
@@ -211,6 +218,7 @@
     <string name="hints_quick_prepare">Pregătire…</string>
     <string name="hints_quick_scanning">Scanare…</string>
     <string name="hints_residual_header_left">Reziduuri</string>
+    <string name="hints_scan_has_finish">Curățare finalizată</string>
     <string name="hints_scanfinish">Nimic de reciclat, încercați curăţarea profundă</string>
     <string name="hints_storage_clean_size">Au fost eliberaţi %s din stocarea internă</string>
     <string name="hints_storage_free">Liber</string>
@@ -226,6 +234,8 @@
     <string name="installed">Instalate</string>
     <string name="installing">Instalare</string>
     <string name="item_title_process_mode">Selectați o acțiune</string>
+    <string name="junk_tag_RF_EmptyFolders">Dosare goale</string>
+    <string name="junk_tag_RF_ImageThumbnails">Miniaturile din Galerie</string>
     <string name="just_now">Chiar acum</string>
     <string name="kilobyteShort">KB</string>
     <string name="label_image_list_none">Niciuna</string>
@@ -267,6 +277,7 @@
     <string name="optimizecenter_data_support_cm">Oferit de Clean Master</string>
     <string name="optimizecenter_data_support_tc">Oferit de Tencent</string>
     <string name="petabyteShort">PB</string>
+    <string name="phone_search">Căutare Google</string>
     <string name="positive_confirm">OK</string>
     <string name="pref_category_title_auto_clean_settings">Curăţare automată</string>
     <string name="pref_category_title_auto_update_cleanup_db">Setări adiţionale</string>
@@ -304,6 +315,7 @@
     <string name="privacy_app_desc_message">Cont, parole, şi mesaje</string>
     <string name="privacy_app_desc_search">Cont, parole, şi istoric căutări</string>
     <string name="privacy_app_desc_setting">Cont, parole, şi setări</string>
+    <string name="privacy_appdata_chrome_history_des">Site-uri vizitate</string>
     <string name="privacy_browser_desc">Elemente căutate</string>
     <string name="privacy_cache_desc">Cont, parole, istoric, setări şi altele</string>
     <string name="privacy_cache_empty">Nu există date private</string>
@@ -321,6 +333,7 @@
     <string name="safety_rank">Înaintea a %d%% utilizatori MIUI în ceea ce privește securitatea</string>
     <string name="sc_allow_network_dialog_button">Permiteţi</string>
     <string name="sc_allow_network_dialog_message">Permiteți ca această aplicație să se conecteze la internet pentru a primi actualizări?</string>
+    <string name="search_history">Istoricul de căutare</string>
     <string name="see_more">Mai multe</string>
     <string name="set_immediately">Setați</string>
     <string name="seton_immediately">Porniți</string>
@@ -329,7 +342,9 @@
     <string name="similar_image_empty">Nu există fotografii dublate</string>
     <string name="similar_image_scaning">Verificare…</string>
     <string name="similar_image_title">Fotografii</string>
+    <string name="sms">SMS/MMS</string>
     <string name="sponsored">Sponsorizate</string>
+    <string name="start_downloading_app">A început descărcarea pentru：%1$s</string>
     <string name="start_install">Instalați acum</string>
     <string name="summary_auto_cleaner">Curățați sistemul în mod automat la fiecare 3 zile?</string>
     <string name="summary_delete_apk">Ștergeți definitiv fișierele .apk selectate?</string>
