--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -106,6 +106,7 @@
     <string name="dialog_call_ordinary_telephone">Apel obișnuit</string>
     <string name="dialog_purchase">Suplimentați</string>
     <string name="do_not_ask">Nu arăta din nou</string>
+    <string name="do_not_support_video_calls_by_remote">"Apelurile video nu sunt suportate pe celălalt telefon"</string>
     <string name="emergency_call_dialog_number_for_display">Număr de urgenţă</string>
     <string name="fraud_call_answer">Răspundeţi</string>
     <string name="fraud_call_decline">Refuzaţi</string>
