--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -201,6 +201,7 @@
     <string name="crop_tooltip">Trageţi markerii pentru a trunchia</string>
     <string name="crossprocess">Procesare</string>
     <string name="custom_select_title_deselect_all">Deselectați</string>
+    <string name="custom_select_title_quickly_share">Partajați</string>
     <string name="custom_select_title_select_all">Selectați tot</string>
     <string name="custom_select_title_select_item">Selectați elementele</string>
     <string name="debugging_tip">Se generează raportul erorilor</string>
@@ -300,6 +301,8 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="fail_to_pick_email">Adresă de e-mail incorectă</string>
     <string name="fail_to_sync_album">Sincronizarea albumului a eşuat. Verificați conexiunea la rețea şi încercaţi din nou.</string>
     <string name="family_member_invitation_text">Alt membru al familiei</string>
+    <string name="fast_share_auto_render">Înfrumusețare</string>
+    <string name="fast_share_auto_render_finish">Înfrumusețată</string>
     <string name="fileSizeSuffix">%1$s%2$s</string>
     <string name="filllight">Lumină de umplere</string>
     <string name="filter">Filtru</string>
@@ -520,6 +523,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="picker_image_will_download">"%d dintre fotografiile selectate nu sunt pe telefon; acestea vor fi descărcate"</string>
     <string name="picker_mobile_data_video">"Nu se pot descărca videoclipuri utilizând datele mobile; au fost omise %d."</string>
     <string name="picker_origin_need_download">"%1$d dintre fotografiile selectate nu sunt pe telefon (%2$dMB); le descărcați utilizând datele mobile?"</string>
+    <string name="picker_skip_unavailable_images">" "&lt;număr="una"&gt;"S-a omis o fotografie care nu există în telefon."&lt;/item&gt; &lt;număr="mai multe"&gt;"S-au omis %d fotografii care nu sunt în telefon."&lt;/item&gt;" "</string>
     <string name="picker_title_format">Fotografii selectate: %d</string>
     <string name="picker_title_selection_format">Au fost selectate %d fotografii</string>
     <string name="picker_title_unlimit">Selectați fotografiile</string>
