--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
@@ -6,8 +6,10 @@
 Mesajele vor apărea doar în spațiul secundar."</string>
     <string name="PrivacyContactDes2">"Dacă ați utilizat mesajele private în spațiul principal,
 această opțiune va fi activată în mod automat în spațiul secundar."</string>
+    <string name="add_finger_print">Adăugați o amprentă</string>
     <string name="appData">Aplicații instalate</string>
     <string name="app_name">Componentă de bază de securitate</string>
+    <string name="back">Înapoi</string>
     <string name="cancelClosePassword">"Nu opri"</string>
     <string name="cancel_button">Renunțați</string>
     <string name="changePassword">Modificați parola</string>
@@ -48,6 +50,9 @@ pentru a le putea vedea în orice moment"</string>
     <string name="deleteAll">Ștergeți tot</string>
     <string name="deleteDataConfirm">Toate elementele vor fi șterse</string>
     <string name="deleteDataDes">"Nu ați selectat elementele care trebuie mutate. Odată șterse, nu le veți putea restaura ."</string>
+    <string name="delete_fingerprint">Ștergeți amprenta</string>
+    <string name="delete_fingerprint_desc">Amprenta pentru spațiul secundar va fi eliminată împreună cu parola</string>
+    <string name="delete_phone_fingerprint">Ștergeți amprenta pentru spațiul secundar</string>
     <string name="delete_src_file">Ștergeți fișierele</string>
     <string name="delete_src_photo">Ștergeți fotografiile</string>
     <string name="dir_switch_out_all_photos">Galeria din Spațiul Secundar</string>
@@ -67,6 +72,9 @@ pentru a le putea vedea în orice moment"</string>
     <string name="err_unknown">Eroare necunoscută</string>
     <string name="err_volume_not_enough">Spațiu de stocare insuficient</string>
     <string name="exit_private_space">Comutați</string>
+    <string name="finger_print_num">Amprenta %d</string>
+    <string name="finger_print_of_use">Utilizați amprenta</string>
+    <string name="fingerprint_removal_failed">"Nu s-a putut elimina amprenta"</string>
     <string name="goToSecondSpacce">Mergeți în Spațiul Secundar</string>
     <string name="go_on_import">Importați</string>
     <string name="guide_contact_sub_title_desc">"Contactele adăugate în Spațiul Secundar vor fi private.
@@ -94,19 +102,24 @@ Le puteți de asemenea descărca separat."</string>
     <string name="loading_apps">Se încarcă aplicațiile…</string>
     <string name="loading_space">Doar o secundă…</string>
     <string name="loading_success">Încărcate cu succes</string>
+    <string name="lock_screen_open_second_space">Accesați spațiul secundar din Blocarea ecranului</string>
     <string name="mess ageData">Mesaje</string>
     <string name="msg_switch_file">Ștergeți aceste fișiere din Spațiul Principal după ce vor fi mutate?</string>
     <string name="msg_switch_photo">Ștergeți aceste fotografii din Spațiul Principal după ce vor fi mutate?</string>
     <string name="needSetKeyguardFirst">Setați parola pentru Spațiul Principal</string>
     <string name="needSetKeyguardFirstDes">Setați parola pentru Spațiul Principal înainte de a o seta pe cea pentru Spațiul Secundar</string>
+    <string name="need_set_second_space_desc">Adăugați o parolă pentru spațiul de lucru secundar înainte de a adăuga amprenta pentru accesarea acestuia</string>
+    <string name="need_set_second_space_pwd_first">Setați mai întâi parola pentru Spațiul secundar</string>
     <string name="newSecondSpace">Activați Spațiul Secundar</string>
     <string name="next_setp">Mai departe</string>
+    <string name="no_match_repate_scanner">"Amprentele nu corespund; scanați din nou"</string>
     <string name="normal_app">Spațiul Principal</string>
     <string name="not_support_multiple_users">"Nu sunt suportate spații de lucru multiple"</string>
     <string name="notificationSetPassword">Setați parola</string>
     <string name="notificationSetPasswordDes">Protejați-vă datele din Spațiul Secundar</string>
     <string name="notificationSummary">Comutați spațiul de lucru din bara de notificări</string>
     <string name="notificationTitle">Buton în bara de notificări</string>
+    <string name="notification_recommend_title">Top 12 aplicații pentru Spațiul secundar</string>
     <string name="notification_setting_second_space">Configurați Spațiul Secundar</string>
     <string name="notification_setting_second_space_desc">Adăugați parola pentru Spațiul Secundar și mutați datele</string>
     <string name="ok_button">OK</string>
@@ -116,6 +129,8 @@ Le puteți de asemenea descărca separat."</string>
     <string name="otherSettings">Alte setări</string>
     <string name="passWordGuardSummary">Accesați Spațiul Secundar din blocarea ecranului utilizând o parolă</string>
     <string name="passwordProtect">Parola</string>
+    <string name="please_diff_finger_print">"Asigurați-vă că utilizați amprente diferite pentru cele 2 spații de lucru.
+Altfel nu veți putea accesa Spațiul secundar din Blocarea ecranului."</string>
     <string name="privacyContactsSummary">Arată elementele private în Spațiul Secundar</string>
     <string name="privacyContactsTitle">Mesaje și contacte private</string>
     <string name="private_sms_show_sub_title">Mesajele vor fi partajate între cele 2 spații de lucru​</string>
@@ -125,12 +140,25 @@ Le puteți de asemenea descărca separat."</string>
     <string name="removeSuccess">Șters cu succes</string>
     <string name="remove_second_space_msg">Toate datele aplicațiilor din Spațiul Secundar vor fi șterse după ce veți elimina Spațiul Secundar. Continuați?</string>
     <string name="removingSpace">Ștergere…</string>
+    <string name="repeat_scanner_fingerprint">Adăugați din nou</string>
     <string name="restore_normal_show">"Nu arăta mesajele private"</string>
     <string name="restore_show_desc">"Nu arăta mesajele private în Spațiul Secundar. Ele vor fi în continuare disponibile în Spațiul Principal."</string>
     <string name="restore_show_toast">Nu se afișează mesajele private</string>
     <string name="retain_src_file">Păstrează fișierele</string>
     <string name="retain_src_photo">Păstrează fotografiile</string>
+    <string name="scanner_fingerprint">Se scanează amprenta…</string>
+    <string name="scanner_fingerprint_enter_second">"Scanați amprenta pentru Spațiul secundar
+pentru a accesa Spațiul secundar din Blocarea ecranului"</string>
+    <string name="scanner_fingerprint_error_tips_desc">"Nu s-au găsit amprente care să corespundă. Adăugați amprenta pentru Spațiul secundar?"</string>
+    <string name="scanner_fingerprint_error_tips_title">"Nu s-au găsit amprente care să corespundă"</string>
+    <string name="scanner_fingerprint_tips_desc">Selectați amprenta pentru accesarea Spațiului secundar. Nu o veți putea utiliza pentru Spațiul principal.</string>
+    <string name="scanner_fingerprint_tips_title">Accesați Spațiul secundar utilizând amprenta existentă</string>
+    <string name="scanner_second_space_fingerprint">Scanați amprenta pentru Spațiul secundar</string>
     <string name="secondSpace">Spațiul Secundar</string>
+    <string name="second_owner_finger_print">Amprenta pentru Spațiul secundar</string>
+    <string name="second_space_finger_printf_desc">Adăugați amprenta utilizată pentru accesarea Spațiului secundar</string>
+    <string name="second_space_finger_printf_title">Amprenta pentru Spațiul secundar</string>
+    <string name="select_existed_fingerprint">Selectați amprenta</string>
     <string name="serNameSummary">Spațiul Secundar</string>
     <string name="setSecondSpacePassword">Setați parola pentru Spațiul Secundar</string>
     <string name="setSecondSpacePasswordGuide">Seați parola pentru Spațiul Secundar</string>
@@ -139,6 +167,9 @@ Le puteți de asemenea descărca separat."</string>
     <string name="setSuccess">Parolele au fost setate cu succes</string>
     <string name="set_space_pwd_detail">Puteți accesa Spațiul Secundar utilizând parola</string>
     <string name="set_space_pwd_suc">Parola pentru Spațiul Secundar a fost adăugată</string>
+    <string name="setting_finger_print_sub_title">Asigurați-vă că amprenta este diferită de cea pentru Spațiul principal</string>
+    <string name="setting_finger_print_title">Adăugați amprenta pentru Spațiul secundar</string>
+    <string name="setting_fingerprint_title">Adăugați parola pentru Spațiul secundar</string>
     <string name="setting_is_show_text_contacts">Setați mesajele și contactele private</string>
     <string name="settings_cross_notification_summary">Primiți notificări de la aplicațiile din celălalt spațiu de lucru</string>
     <string name="settings_cross_notification_title">Notificări</string>
@@ -157,8 +188,13 @@ Le puteți de asemenea descărca separat."</string>
     <string name="spaceSetting">Setări</string>
     <string name="startSet">Setați</string>
     <string name="startTransfer">Mutați</string>
+    <string name="start_input_finger_print">Adăugați amprenta</string>
+    <string name="start_new_fingerprint">Adăugați o nouă amprentă</string>
+    <string name="start_new_fingerprint_tips">"Utilizați amprenta pentru Spațiul secundar
+pentru a accesa Spațiul secundar din Blocarea ecranului"</string>
     <string name="start_setting_guide_desc_title">Sunt câteva lucruri de setat</string>
     <string name="summary_switch_apps_settings">Selectați aplicațiile utilizate în Spațiul Secundar</string>
+    <string name="sure_to_use">Confirmați</string>
     <string name="switchDataSummary">Mutați elemente dintr-un spațiu de lucru în altul</string>
     <string name="switch_apps_settings">Setări pentru aplicații</string>
     <string name="switch_data_app">Mutați elementele în Spațiul Secundar</string>
@@ -197,11 +233,12 @@ Le puteți de asemenea descărca separat."</string>
     <string name="transferMessage">Mesajele din Spațiul Secundar vor fi mutate în Spațiul Principal</string>
     <string name="tryNow">Încercați acum</string>
     <string name="wating">Doar o secundă…</string>
-    <string name="xspace_chocie">Alte aplicații</string>
-    <string name="xspace_creating">Se clonează aplicația…</string>
+    <string name="xspace_chocie">Suport pentru aplicațiile clonate</string>
+    <string name="xspace_creating">Se crează aplicația clonată…</string>
     <string name="xspace_description">Clonați aplicații pentru a le putea utiliza separat. Acestea vor avea pictograme specifice pe ecranul principal.</string>
     <string name="xspace_header">Aplicații clonate</string>
     <string name="xspace_install_completed">Pictograma adăugată în Ecranul principal</string>
+    <string name="xspace_install_failed">"Nu s-a putut crea"</string>
     <string name="xspace_installing">Se instalează…</string>
     <string name="xspace_introduce">Recomandate</string>
     <string name="xspace_label">Aplicații clonate</string>
